# new_cxx_project

./: .readthedocs.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENCE  LICENSE  README.md  args.py  install_prerequisites.py  new_cxx_project.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  install_prerequisites.yaml  test_new_cxx_project.yml
docker/: Dockerfile
docs/: conf.py  requirements.in  requirements.txt
docs/source/generated_files/: cmake.rst  vcpkg.rst
new_project/: diagnostics.py  generate_cmake.py  generate_project.py  import_templates.py
templates/: .clang-tidy  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  vcpkg.json
templates/.github/ISSUE_TEMPLATE/: feature_request.yml
templates/.github/workflows/: basic_ci.yml
templates/config/cmake/: import_packages.cmake  install_targets.cmake  project_options.cmake
templates/config/cmake/detail/: add_targets.cmake  default_options.cmake  vcpkg.cmake  vcpkg_toolchain_file.cmake.in
templates/config/cmake/toolchains/: toolchain_base.cmake
templates/docs/: CMakeLists.txt  conf.py
templates/docs/_templates/: layout.html
templates/docs/source/project/: cmake.rst  vcpkg.rst
test/: lit.cfg.py  lit.rm.py  lit.site.cfg.py.in
test/default-options/: default_options.test
test/default-options/changes/: vcpkg.json
test/default-options/changes/source/: CMakeLists.txt  check.hpp  greeter.cpp  greeter_exe.cpp  greeter_lib.hpp  hello.cpp  hello_consumes_header_only.cpp  test_greeter.cpp
test/default-options/changes/source/compile_options/: CMakeLists.txt  greeter.cpp  hello.cpp  test_greeter.cpp
test/default-options/changes/source/define/: CMakeLists.txt  greeter.cpp  greeter.hpp  hello.cpp  test_greeter.cpp
test/default-options/changes/source/header_only_library/: CMakeLists.txt  fanciful.hpp  greeter.hpp  test_greeter.cpp
test/default-options/changes/source/link_options/: CMakeLists.txt  greeter.cpp  greeter.hpp
test/default-options/changes/source/module_interface/: CMakeLists.txt  greeter.cpp  greeter_module.cpp
test/default-options/changes/source/multi_file/: CMakeLists.txt  greeter.cpp  greeter.hpp  greeter_impl.cpp  greeter_impl.hpp
test/default-options/changes/source/object_library/: CMakeLists.txt  test_greeter.cpp
test/default-options/changes/source/plugin_library/: CMakeLists.txt  greeter.cpp  greeter.hpp  hello.cpp  plugin_handler.hpp  test_greeter.cpp
test/default-options/changes/source/shared_library/: CMakeLists.txt  fanciful.cpp  fanciful.hpp  greeter.cpp
test/default-options/changes/source/static_library/: CMakeLists.txt  fanciful.cpp  greeter.hpp  hello.cpp  test_greeter.cpp
test/default-options/expected-output/: .clang-format  .clang-tidy  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENCE  README.md
test/default-options/expected-output/config/cmake/: install_targets.cmake
test/default-options/expected-output/config/cmake/detail/: add_targets.cmake  default_options.cmake
test/default-options/expected-output/config/cmake/toolchains/: x86_64-unknown-linux-gnu.cmake  x86_64-unknown-linux-llvm.cmake
test/default-options/expected-output/docs/: CMakeLists.txt
test/default-options/tests/default_options/: Debug.test  MinSizeRel.test  RelWithDebInfo.test  Release.test  expected-cmake.out  expected-ctest.out  expected-install.out  expected-permissions.out  expected-stdout.out
test/default-options/tests/gnu/: Debug.test  MinSizeRel.test  RelWithDebInfo.test  Release.test  expected-cmake.out  expected-ctest.out  expected-install.out  expected-permissions.out
test/default-options/tests/llvm/: Debug.test  MinSizeRel.test  RelWithDebInfo.test  Release.test  expected-cmake.out  expected-ctest.out  expected-install.out  expected-permissions.out
test/default-options/ubsan-only-changes/source/: CMakeLists.txt
test/diagnostics/: bad_github_remote.test  build-type-not-set.test  invalid_name.test  no_args.test  preexisting_repo.test  source-not-set.test  target-not-set.test
test/diagnostics/COMPILE_OPTIONS-do-not-propagate/: CMakeLists.txt  greeter.cpp  test.test
test/diagnostics/DEFINE-does-not-propagate/: CMakeLists.txt  greeter.hpp  test.test
test/diagnostics/DEPENDS_ON-does-not-propagate/: CMakeLists.txt  greeter.hpp  hello.cpp  make_fancy.cpp  make_fancy.hpp  test.test
test/diagnostics/LINK_OPTIONS-do-not-propagate/: CMakeLists.txt  greeter.cpp  greeter_impl.cpp  test.test
test/diagnostics/MODULE_INTERFACE-cannot-be-installed/: CMakeLists.txt  test.test
test/diagnostics/cxx_test-specifies-INSTALL_WITH/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/: bad_library_type.test  header_only_with_sources.test  no_library_type.test
test/diagnostics/library-type-errors/HEADER_ONLY-specifes-COMPILE_OPTIONS/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/HEADER_ONLY-specifes-LINK_OPTIONS/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/HEADER_ONLY-specifies-DEPENDS_ON/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/HEADER_ONLY-specifies-HEADERS/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/HEADER_ONLY-specifies-MODULE_INTERFACE/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/HEADER_ONLY-specifies-SOURCES/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/LIBRARY_TYPE-missing/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/LIBRARY_TYPE-unknown/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/OBJECT-specifes-LINK_OPTIONS/: CMakeLists.txt  test.test
test/diagnostics/library-type-errors/OBJECT-specifies-DEPENDS_ON_INTERFACE/: test.test  (+1 more)
test/files/: copied-okay.test  git-remote.test  git-status.test
test/files/.github/: pull_request_template.md
test/files/expected/: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENCE  README.md
test/files/vcpkg-changes/: .gitmodules  CMakeLists.txt  vcpkg.json
test/files/vcpkg-changes/config/cmake/detail/: vcpkg.cmake  vcpkg_toolchain_file.cmake.in
test/files/vcpkg-changes/docs/source/project/: vcpkg.rst
(+28 files in other folders)
